fixed overflow issue with nav button

--- a/GR4_app/frontend/src/components/Modules/Styles/nav.css
+++ b/GR4_app/frontend/src/components/Modules/Styles/nav.css
@@ -10,7 +10,7 @@
 .color-nav .navbar-nav .nav-link,
 .color-nav .navbar-text {
     color: #F9AB55 !important;
-    margin-right: 4rem;
+    margin-right: 3rem;
     font-size: 1.1rem;
     font-family: 'Nunito Sans', sans-serif;
 }
